stratumv2/nx-noise/target/rls/debug/build/rayon-8985baeed45ccd60/stderr
error[E0658]: const generics are unstable
 --> <anon>:1:41
  |
1 | pub fn probe() { let _ = { fn foo<const N: usize>() {} }; }
  |                                         ^
  |
  = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
  = help: add `#![feature(const_generics)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
